# pyFaaS-framework

./: .gitignore  .pre-commit-config.yaml  Makefile  Pipfile  README.md  bandit.baseline  setup.cfg  setup.py  tox.ini
.github/: .pre-commit-config.yaml
.github/workflows/: build.yml  publish-pypi.yml  python-package.yml
src/faas_framework/: __init__.py  exceptions.py  handlers.py  middlewares.py  requests.py  responses.py  typing.py
src/faas_framework/aws/: utils.py
src/faas_framework/aws/handlers/: api_gw.py  event_bridge.py  native.py  sqs.py
src/faas_framework/aws/models/: event_bridge.py  sns.py  sqs.py
src/faas_framework/models/: __init__.py  config.py
src/faas_framework/utils/: collections.py  functions.py
src/lamb_frame/: app.py  exceptions.py  handlers.py  middlewares.py  requests.py  responses.py  typing.py
src/lamb_frame/aws/: utils.py
src/lamb_frame/aws/handlers/: api_gw.py  native.py  sqs.py
src/lamb_frame/aws/models/: sns.py  sqs.py
src/lamb_frame/models/: __init__.py  config.py
src/lamb_frame/utils/: collections.py  functions.py
tests/: conftest.py  test_application.py  test_exceptions.py  test_handlers.py
tests/aws/: conftest.py  test_utils.py
tests/aws/handlers/: __init__.py  test_api_gw.py  test_sqs.py
tests/aws/models/: test_event_bridge.py  test_sns.py  test_sqs.py
tests/models/: test_config.py
tests/test_app/: lamb_frame  package-lock.json  package.json  serverless.yml
tests/test_app/handlers/integration/: data.py  handler.py  settings.py
tests/test_app/handlers/proxy/: handler.py
tests/test_app/handlers/proxy2/: data.py  handler.py  settings.py
tests/test_app/package_x/: models.py
tests/utils/: test_collections.py  test_functions.py
