[metadata]
name = PyFaaS-framework
# Version needs regex in setup.py.
;url = https://palletsprojects.com/p/flask
;project_urls =
;    Documentation = https://flask.palletsprojects.com/
;    Code = https://github.com/pallets/flask
;    Issue tracker = https://github.com/pallets/flask/issues
;license = BSD-3-Clause
author = Nadir Albajari
;author_email = nadir.albajari@gma
;maintainer = Pallets
;maintainer_email = contact@palletsprojects.com
description = A lightweight Python FAAS framework - inspired by Django and Django Rest Framework
long_description = file: README.md
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: pyFaaS-framework
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Cloud :: AWS :: Lambda Framework
[options]
package_dir = =src
packages = find:
include_package_data = true
python_requires = >= 3.7
# Dependencies are in setup.py for GitHub's dependency graph.

;[setuptools.find_packages]
[options.packages.find]
where = src

;where = faas_framework
;include =
;    *faas_framework*
;exclude =
;    *tests*
;[options.entry_points]
;console_scripts =
;    flask = flask.cli:main

;[tool:pytest]
;testpaths = tests
;filterwarnings =
;    error

;[coverage:run]
;branch = True
;source =
;    flask
;    tests

;[coverage:paths]
;source =
;    src
;    */site-packages

[flake8]
;# B = bugbear
;# E = pycodestyle errors
;# F = flake8 pyflakes
;# W = pycodestyle warnings
;# B9 = bugbear opinions
;# ISC = implicit-str-concat
;select = B, E, F, W, B9, ISC
;ignore =
;    # slice notation whitespace, invalid
;    E203
;    # import at top, too many circular import fixes
;    E402
;    # line length, handled by bugbear B950
;    E501
;    # bare except, handled by bugbear B001
;    E722
;    # bin op line break, invalid
;    W503
;# up to 88 allowed by bugbear B950
max-line-length = 120
max-complexity = 15
;per-file-ignores =
;    # __init__ module exports names
