[metadata]
name = PyFaaS-framework
# Version needs regex in setup.py.
;url = https://palletsprojects.com/p/flask
;project_urls =
;    Documentation = https://www.pyfaas-framework.com/
;    Code = https://github.com/nadobando/pyFaaS-framework
;    Issue tracker = https://github.com/nadobando/pyFaaS-framework/issues
;license = BSD-3-Clause
author = Nadir Albajari
;author_email = nalbajari1@hotmail.com
;maintainer = Nadir Albajari
;maintainer_email = nalbajari1@hotmail.com
description = A lightweight Python FAAS framework - inspired by Django and Django Rest Framework
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Application Frameworks

[options]
package_dir = =src
packages = find:
;include_package_data = true
python_requires = >= 3.7
# Dependencies are in setup.py for GitHub's dependency graph.

;[setuptools.find_packages]
[options.packages.find]
where = src

;where = faas_framework
;include =
;    *faas_framework*
;exclude =
;    *tests*
;[options.entry_points]
;console_scripts =
;    flask = flask.cli:main

;[tool:pytest]
;testpaths = tests
;filterwarnings =
;    error

;[coverage:run]
;branch = True
;source =
;    flask
;    tests

;[coverage:paths]
;source =
;    src
;    */site-packages

[flake8]
;# B = bugbear
;# E = pycodestyle errors
;# F = flake8 pyflakes
;# W = pycodestyle warnings
;# B9 = bugbear opinions
;# ISC = implicit-str-concat
;select = B, E, F, W, B9, ISC
ignore =
;   Commented code
    E800
    ; single letter variable names
    VNE001
    ; TODO
    T101
    I001

;    # slice notation whitespace, invalid
;    E203
;    # import at top, too many circular import fixes
;    E402
;    # line length, handled by bugbear B950
;    E501
;    # bare except, handled by bugbear B001
;    E722
;    # bin op line break, invalid
;    W503
;# up to 88 allowed by bugbear B950
max-line-length = 120
max-complexity = 15
;per-file-ignores =
;    # __init__ module exports names


[isort]
multi_line_output = 4
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 120
skip = "example"
